style: fix react-select menu showing behind table header

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,10 @@
   @apply rounded-none bg-secondary-focus;
 }
 
+.table th:first-child {
+  z-index: 0;
+}
+
 .table:not(.table-zebra) thead tr:not(:last-child) th {
   @apply border-none;
 }
@@ -32,13 +36,13 @@
   @apply bg-base-300;
 }
 
-.table tbody.multirow tr:nth-child(n + 2) ~ tr td:first-child,
-.table tbody.multirow tr:nth-child(n + 2) ~ tr td:last-child {
+.table tbody.multirow tr:nth-child(n + 2)~tr td:first-child,
+.table tbody.multirow tr:nth-child(n + 2)~tr td:last-child {
   @apply rounded-none;
 }
 
-.menu li > a.icon-only,
-.menu li > a.icon-only.active {
+.menu li>a.icon-only,
+.menu li>a.icon-only.active {
   @apply p-4 rounded-lg;
 }
 
@@ -57,13 +61,15 @@
 .dzu-previewStatusContainer progress {
   @apply progress progress-primary;
 }
-.nested-dropdown > .dropdown-content {
+
+.nested-dropdown>.dropdown-content {
   @apply opacity-0 invisible absolute z-50;
 }
-.nested-dropdown.dropdown-open > .dropdown-content,
-.nested-dropdown.dropdown-hover:hover > .dropdown-content,
-.nested-dropdown:focus > .dropdown-content,
-.nested-dropdown:focus-within > .dropdown-content {
+
+.nested-dropdown.dropdown-open>.dropdown-content,
+.nested-dropdown.dropdown-hover:hover>.dropdown-content,
+.nested-dropdown:focus>.dropdown-content,
+.nested-dropdown:focus-within>.dropdown-content {
   @apply visible opacity-100 scale-100;
 }
 
